add home institution filter

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -8,6 +8,9 @@ filters:
   - key: title
     title: Title
     multiple: true
+  - key: home institution
+    title: Home institution
+    multiple: false
   - key: agency
     title: Agency collaborator
     multiple: true
