--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,8 +41,10 @@ layout: base
   <div class="usa-grid" align="center">
     <div class="videoWrapper">
       <iframe src="https://drive.google.com/file/d/0BxayWw6MbOYbTE8tSktGRFNlNGM/preview" width="640" height="480"></iframe>
-  <div> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
-  <b>OES is currently accepting proposals from USAID Missions for FY18 initiatives.</b> 
+    </div>
+    <div> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
+    
+    OES is currently accepting proposals from USAID Missions for FY18 initiatives. 
   </div>
     {% if page.content-button-link %}
       <a href="{{ page.video-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.video-button-text }}</a>
@@ -53,5 +55,3 @@ layout: base
 <section class="usa-section background-light">
 {% include contact.html %}
 </section>
-
-
