--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,11 +44,9 @@ layout: base
         <iframe src="https://drive.google.com/file/d/0BxayWw6MbOYbTE8tSktGRFNlNGM/preview" width="512" height="384"></iframe>
       </div> 
     <div class="usa-width-one-third single-sidebar">
-        {% if video.content %}
-         Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
-         OES is currently accepting proposals from USAID Missions for FY18 initiatives. 
-        {% endif %}
+         Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact. <b>OES is currently accepting proposals from USAID Missions for FY18 initiatives.</b> 
   </div>
+      <div class= "usa-grid" align="center">
     {% if page.video-button-link %}
       <a href="{{ page.video-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.video-button-text }}</a>
     {% endif %}
