--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,9 +45,8 @@ layout: base
       </div>
     </div>
   <div class="usa-width-one-third single-sidebar">
-     <h3 class="h4"> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact. <b>OES is currently accepting proposals from USAID Missions for FY18 initiatives.</b></h3> 
-    </div>
   <div class= "usa-grid" align="center">
+    <p> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact. OES is currently accepting proposals from USAID Missions for FY18 initiatives.</p>
     {% if page.video-button-link %}
       <a href="{{ page.video-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.video-button-text }}</a>
     {% endif %}
