--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,12 +39,12 @@ layout: base
 
 <section class="usa-section background-brand-dark">
   <div class="usa-grid main-content">
-    <div class="usa-width-two-thirds">
+    <div class="usa-width-one-half">
       <div class="videoWrapper">
         <iframe src="https://drive.google.com/file/d/0BxayWw6MbOYbTE8tSktGRFNlNGM/preview" width="512" height="384"></iframe>
       </div>
     </div>
-  <div class="usa-width-one-third single-sidebar">
+  <div class="usa-width-one-half single-sidebar">
   <div class= "usa-grid" align="center">
     <p> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact. OES is currently accepting proposals from USAID Missions for FY18 initiatives.</p>
     {% if page.video-button-link %}
