--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,9 @@ layout: base
     </div>
   <div class="usa-width-one-half single-sidebar">
   <div class= "usa-grid" align="center">
-    <p> <b>Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact. OES is currently accepting proposals from USAID Missions for FY18 initiatives.</b></p>
+    <p> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
+      
+      <b>OES is currently accepting proposals from USAID Missions for FY18 initiatives.</b></p>
     {% if page.video-button-link %}
       <a href="{{ page.video-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.video-button-text }}</a>
     {% endif %}
