--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -8,7 +8,7 @@ filters:
   - key: title
     title: Title
     multiple: true
-  - key: home institution
+  - key: home
     title: Home institution
     multiple: false
   - key: agency
