--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@ layout: base
 <section class="usa-section background-brand-dark">
   <div class="usa-grid main-content">
      <div class= "usa-grid" align="center">
-      <p><h2>Call for USAID Project Proposals</h2></p> 
+      <p><h2>Call for Project Proposals</h2></p> 
     <p>    </p>
     <div class="usa-width-one-half">
       <div class="videoWrapper">
@@ -49,7 +49,7 @@ layout: base
     </div>
   <div class="usa-width-one-half single-sidebar">
   <div class= "usa-grid" align="center">
-    <p> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaboration is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
+    <p> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaborations is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
       
       <b>OES is currently accepting proposals from USAID Missions for FY18 initiatives.</b></p>
     {% if page.video-button-link %}
