--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: base
     </div>
     <div class="usa-media_block-body">
     <div class="billboard-message">
-      {{ content }}
+      <h2>{{ content }}</h2>
     </div>
     {% if page.content-button-link %}
       <a href="{{ page.content-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.content-button-text }}</a>
