--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@ layout: base
 <section class="usa-section background-brand-dark">
   <div class="usa-grid main-content">
      <div class= "usa-grid" align="center">
-      <p><h1>Call for Project Proposals</h1></p> 
+      <p><h1>OES and USAID</h1></p> 
     <p>    </p>
     <div class="usa-width-one-half">
       <div class="videoWrapper">
