--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,7 +51,7 @@ layout: base
   <div class= "usa-grid" align="center">
     <p> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaborations is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
       
-      <b>USAID Missions or implementing partners interested in collaborating with OES should submit their information via the link below.</b></p>
+      <b>USAID Missions or implementing partners interested in learning more, please get in touch with us by clicking the button below.</b></p>
     {% if page.video-button-link %}
       <a href="{{ page.video-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.video-button-text }}</a>
     {% endif %}
