--- a/_layouts/team-single.html
+++ b/_layouts/team-single.html
@@ -26,7 +26,7 @@ class: page-team-single
   {% endif %}
   {% if page.agency %}
     <h3 class="h4">Agency</h3>
-    <p>{{ page.agency | list.sort | join: ', ' )}}</p>
+    <p>{{ page.agency | sort.join: ', ' )}}</p>
   {% endif %}
   </div>
 </div>
