--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -3,7 +3,7 @@ layout: page
 class: page-team
 filters:
   - key: year
-    title: Year
+    title: Years Active
     multiple: true
   - key: title
     title: Title
