--- a/_layouts/team-single.html
+++ b/_layouts/team-single.html
@@ -21,11 +21,11 @@ class: page-team-single
     <p>{{ page.title | join: ', ' }}</p>
   {% endif %}
   {% if page.year %}
-    <h3 class="h4">Year</h3>
+    <h3 class="h4">Years Active</h3>
     <p>{{ page.year | join: ', ' }}</p>
   {% endif %}
   {% if page.agency %}
-    <h3 class="h4">Agency</h3>
+    <h3 class="h4">Agency Collaborators</h3>
     <p>{{ page.agency | join: ', ' }}</p>
   {% endif %}
   </div>
