--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ layout: base
       </div>
     </div>
   <div class="usa-width-one-half single-sidebar">
-  <div class= "usa-grid" align="center">
+  <div class= "usa-grid" align="left">
     <p> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaborations is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
       
       <b>If you are a USAID Mission or implementing partner interested in collaborating with OES, learn how to start the conversation by clicking below.</b></p>
