--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,56 @@
 <footer class="usa-footer usa-footer-medium usa-section background-gray-dark" role="contentinfo">
   <div class="usa-grid">
-    <h2>Drop us a line.</h2>
+    <div class="usa-width-one-half">
+    {% if site.footer.image %}
+      <img class="usa-footer-logo-img" src="{{ site.footer.image | prepend: site.baseurl }}" alt="GSA">
+    {% endif %}
+    </div>
+    <div class="usa-width-one-sixth">
+      <ul class="usa-unstyled-list">
+        <li>
+          <a href="#">link</a>
+        </li>
+        <li>
+          <a href="#">link</a>
+        </li>
+        <li>
+          <a href="#">link</a>
+        </li>
+      </ul>
+    </div>
+    <div class="usa-width-one-sixth">
+      <ul class="usa-unstyled-list">
+        <li>
+          <a href="#">link</a>
+        </li>
+        <li>
+          <a href="#">link</a>
+        </li>
+        <li>
+          <a href="#">link</a>
+        </li>
+      </ul>
+    </div>
+    <div class="usa-width-one-sixth">
+      <ul class="usa-unstyled-list">
+        <li>
+          <a href="#">link</a>
+        </li>
+        <li>
+          <a href="#">link</a>
+        </li>
+        <li>
+          <a href="#">link</a>
+        </li>
+      </ul>
+    </div>
+    <!-- <h2>Drop us a line.</h2>
     <p>To share your thoughts, email us any time at <a href="mailto:{{ site.footer.email }}">{{ site.footer.email }}</a>.</p>
     <p>
       <a href="https://twitter.com/{{ site.footer.twitter }}">{% include icons/twitter.svg %}Follow us</a>
     </p>
     {% if site.footer.image %}
       <img class="usa-footer-logo-img" src="{{ site.footer.image | prepend: site.baseurl }}" alt="GSA">
-    {% endif %}
+    {% endif %} -->
   </div>
 </footer>
