--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,8 @@ $font-path: '../uswds/fonts';
 $image-path: '../uswds/img';
 $logo-url: "{{ site.baseurl }}{{ site.logo }}";
 
+$output-bourbon-deprecation-warnings: false !default;
+
 @import 'core/variables';
 @import 'uswds/all';
 @import 'all';
