--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="usa-footer usa-section background-medium" role="contentinfo">
   <div class="usa-grid">
-    <div class="usa-width-one-half">
+    <div class="footer-logo-links">
     {% include icons/oes.svg %}
     {% if site.footer.image %}
       <img class="usa-footer-logo-img" src="{{ site.footer.image | prepend: site.baseurl }}" alt="GSA">
     {% endif %}
     </div>
-    <div class="usa-width-one-sixth">
+    <div class="footer-links">
       <h2 class="footer-links-heading">Navigate</h2>
       <ul class="usa-unstyled-list">
         <li>
@@ -29,7 +29,7 @@
         </li>
       </ul>
     </div>
-    <div class="usa-width-one-sixth">
+    <div class="footer-links">
       <h2 class="footer-links-heading">Policies</h2>
       <ul class="usa-unstyled-list">
         <li>
@@ -37,7 +37,7 @@
         </li>
       </ul>
     </div>
-    <div class="usa-width-one-sixth">
+    <div class="footer-links">
       <h2 class="footer-links-heading">Contact</h2>
       <ul class="usa-unstyled-list">
         <li>
