--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
   {% endfor %}
     <div class="usa-width-two-thirds contact-form">
       <form id="contact" action="{{ f.url }}">
-        <h2>Keep tabs on OES.</h2>
+        <h2>What's new at OES?</h2>
         <p>Sign up to receive updates on results releases and opportunities to work with the team by filling out our interest form.</p>
         {% for field in f.fields %}
           {% unless field.type == 'hidden' %}
