--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="usa-footer usa-section background-medium" role="contentinfo">
   <div class="usa-grid">
     <div class="footer-logo-links">
-    {% include icons/oes-logo-inverted-small.png %}
+    {% include icons/oes.svg %}
     {% if site.footer.image %}
       <img class="usa-footer-logo-img" src="{{ site.footer.image | prepend: site.baseurl }}" alt="GSA">
     {% endif %}
