--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
       <h2 class="footer-links-heading">Policies</h2>
       <ul class="usa-unstyled-list">
         <li>
-          <a href="#">link</a>
+          <a href="{{ site.baseurl }}/linking-policy/">Linking Policy</a>
         </li>
       </ul>
     </div>
@@ -41,13 +41,13 @@
       <h2 class="footer-links-heading">Contact</h2>
       <ul class="usa-unstyled-list">
         <li>
-          <a href="#">link</a>
+          <a href="{{ site.baseurl }}/press/">Press</a>
         </li>
         <li>
-          <a href="#">link</a>
+          <a href="https://twitter.com/USGSA">@USGSA</a>
         </li>
         <li>
-          <a href="#">link</a>
+          <a href="mailto:oes@gsa.gov?subject=Inquiry/">oes@gsa.gov</a>
         </li>
       </ul>
     </div>
