--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,7 +47,7 @@
           <a href="https://twitter.com/USGSA">@USGSA</a>
         </li>
         <li>
-          <a href="mailto:oes@gsa.gov?subject=Inquiry/">oes@gsa.gov</a>
+          <a href="mailto:oes@gsa.gov?subject=Inquiry">oes@gsa.gov</a>
         </li>
       </ul>
     </div>
