change background color - light

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="usa-footer usa-section background-medium" role="contentinfo">
+<footer class="usa-footer usa-section background-light" role="contentinfo">
   <div class="usa-grid">
     <div class="footer-logo-links">
     {% include icons/oes.svg %}
