change background color

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,3 +1,4 @@
+<section class="usa-section background-tint">
 <div class="banner contact">
   <div class="usa-grid">
   {% for form in site.forms %}
