--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,6 +58,6 @@ layout: base
     </div>
   </section>
 
-<section class="usa-section background-light">
+<section class="usa-section background-tint">
 {% include contact.html %}
 </section>
