add "service of GSA" language test

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,6 +49,9 @@
         <li>
           <a href="mailto:oes@gsa.gov?subject=Inquiry">oes@gsa.gov</a>
         </li>
+        <li>
+          <a>OES is a service based at GSA</a>
+        </li>
       </ul>
     </div>
     <!-- <h2>Drop us a line.</h2>
