format change, italics for GSA disclaimer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,7 +50,7 @@
           <a href="mailto:oes@gsa.gov?subject=Inquiry">oes@gsa.gov</a>
         </li>
         <li>
-          <a>OES is a service based at GSA</a>
+          <h2><a><i>OES is a service based at GSA</i></a></h2>
         </li>
       </ul>
     </div>
