--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -5,8 +5,9 @@
   analytics for DAP, for more info visit
   https://www.digitalgov.gov/services/dap/
 -->
-<script src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency={{ site.analytics.dap.agency}}&subagency={{ site.analytics.dap.subagency }}"
-id="_fed_an_ua_tag"></script>
+<script async type="text/javascript" id="_fed_an_ua_tag"src="https://dap.digitalgov.gov/Universal-Federated-Analytics-M
+in.js?agency=GSA&subagency=OES"></script>
+
 
 <!--
   analytics for 18F guild, for more info visited
