--- a/_layouts/project-single.html
+++ b/_layouts/project-single.html
@@ -4,7 +4,7 @@ class: page-project-single
 ---
 <p class="image-credit">
   {% if page.image-credit %}
-  <a href="{{ page.image-credit }}" target="_blank">Photo credit</a> (Creative Commons)
+  <a href="{{ page.image-credit }}" target="_blank">Photo credit</a>
   {% endif %}
 </p>
 
