--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -6,7 +6,7 @@
   https://www.digitalgov.gov/services/dap/
 -->
 <script async type="text/javascript" id="_fed_an_ua_tag"src="https://dap.digitalgov.gov/Universal-Federated-Analytics-M
-in.js?agency=GSA&subagency=OES"></script>
+in.js?agency=GSA"></script>
 
 
 <!--
