--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -5,8 +5,7 @@
   analytics for DAP, for more info visit
   https://www.digitalgov.gov/services/dap/
 -->
-<script async type="text/javascript" id="_fed_an_ua_tag"src="https://dap.digitalgov.gov/Universal-Federated-Analytics-M
-in.js?agency=GSA"></script>
+<script async type="text/javascript" id="_fed_an_ua_tag"src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=GSA"></script>
 
 
 <!--
