--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -5,8 +5,8 @@
   analytics for DAP, for more info visit
   https://www.digitalgov.gov/services/dap/
 -->
-<script src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency={{ site.analytics.dap.agency}}&subagency={{ site.analytics.dap.subagency }}"
-id="_fed_an_ua_tag"></script>
+<!-- We participate in the US government's analytics program. See the data at analytics.usa.gov. -->
+<script async type="text/javascript" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=GSA" id="_fed_an_ua_tag"></script>
 
 <!--
   analytics for 18F guild, for more info visited
