--- a/_layouts/library.html
+++ b/_layouts/library.html
@@ -22,6 +22,6 @@ scripts:
 
 {{ content }}
 
-{% include filter.html items=site.projects filters=layout.filters %}
+{% include filter.html items=site.library filters=layout.filters %}
 
-{% include projects.html %}
+{% include library.html %}
