--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -9,6 +9,7 @@
 @import "components/footer";
 @import "components/hero";
 @import "components/layout";
+@import "components/library-single";
 @import "components/filter";
 @import "components/logo";
 @import "components/navigation";
@@ -19,6 +20,7 @@
 // Pages --------- //
 @import "pages/projects";
 @import "pages/team";
+@inport "pages/library";
 
 // Custom ------------ //
 @import "custom";
