--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -20,7 +20,7 @@
 // Pages --------- //
 @import "pages/projects";
 @import "pages/team";
-@inport "pages/library";
+@import "pages/library";
 
 // Custom ------------ //
 @import "custom";
