--- a/_includes/library.html
+++ b/_includes/library.html
@@ -1,10 +1,10 @@
 <div class="library-container">
 {% for library in site.library %}
   {% unless library.featured %}
-    <article class="card usa-width-one-third js-filterable" {% for filter in layout.filters %}
+    <article class="library-card usa-width-one-third js-filterable" {% for filter in layout.filters %}
     data-{{ filter.key }}='{{ library[filter.key] | jsonify | xml_escape }}'{% endfor %}>
-      <a class="card-link" href="{{ library.url | prepend: site.baseurl }}" aria-hidden="true" tabindex="-1"></a>
-      <div class="card-image"
+      <a class="library-card-link" href="{{ library.url | prepend: site.baseurl }}" aria-hidden="true" tabindex="-1"></a>
+      <div class="library-card-image"
         style="background-image: url(
         {% if library.image_thumbnail %}
           {{ library.image_thumbnail | prepend: site.baseurl }}
@@ -13,13 +13,13 @@
         {% endif %}
         );">
       </div>
-      <div class="card-banner">
-        <h3 class="card-description">
+      <div class="library-card-banner">
+        <h3 class="library-card-description">
           <span>{{ library.title }}</span>
         </h3>
-        <p class="card-summary">{{ library.summary }}</p>
+        <p class="library-card-summary">{{ library.summary }}</p>
       </div>
-      <a class="card-read" href="{{ library.url | prepend: site.baseurl }}">
+      <a class="library-card-read" href="{{ library.url | prepend: site.baseurl }}">
         Read more
         <span class="usa-sr-only">about {{ library.title }}</span>
         {% include icons/arrow-right.svg %}
