--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -9,6 +9,7 @@
 @import "components/footer";
 @import "components/hero";
 @import "components/layout";
+@import "components/library-card";
 @import "components/library-single";
 @import "components/filter";
 @import "components/logo";
