--- a/_layouts/library.html
+++ b/_layouts/library.html
@@ -2,6 +2,9 @@
 layout: page
 class: page-library
 filters:
+  - key: year
+    title: Year
+    multiple: false
   - key: bottlenecks
     title: Behavioral Bottlenecks
     multiple: true
