--- a/_sass/components/_library-card.scss
+++ b/_sass/components/_library-card.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     margin-right: 2.3%;
-    min-height: 350px;
+    min-height: 450px;
     width: 31%;
   }
 
@@ -40,6 +40,14 @@
   @include media($medium-screen) {
     flex: 1 0 auto;
   }
+}
+
+.library-card-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 200px;
+  width: 100%;
 }
 
 .library-card-description.library-card-description {
@@ -76,4 +84,3 @@
     margin-left: 4px;
   }
 }
-
