--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -2,11 +2,11 @@
 layout: page
 filters:
   - key: year
-    title: Year
+    title: Year Published
   - key: domain
     title: Domain
   - key: agency
-    title: Agency collaborator
+    title: Agency Collaborator
     multiple: true
 scripts:
   - src: /assets/js/filters.js
