--- a/_layouts/library.html
+++ b/_layouts/library.html
@@ -20,6 +20,9 @@ filters:
   - key: domain
     title: Domain
     multiple: true
+  - key: author
+    title: OES Team Member
+    multiple: true
 scripts:
   - src: /assets/js/filters.js
 ---
