--- a/_layouts/library.html
+++ b/_layouts/library.html
@@ -6,22 +6,22 @@ filters:
     title: Year
     multiple: false
   - key: bottlenecks
-    title: Behavioral Bottlenecks
+    title: Behavioral Bottleneck
     multiple: true
   - key: delivery
     title: Delivery Mechanism
     multiple: true
   - key: interventions
-    title: Interventions
+    title: Intervention
     multiple: true
   - key: outcomes
-    title: Outcomes
+    title: Outcome
     multiple: true
   - key: domain
     title: Domain
     multiple: true
   - key: author
-    title: OES Team Member
+    title: OES Team Member Author
     multiple: true
 scripts:
   - src: /assets/js/filters.js
