--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,6 +23,7 @@ layout: base
 
 <section class="usa-section billboard">
   <div class="usa-grid">
+    {% include projects-feature.html %}
     <div class="usa-media_block-img">
       {% include icons/gears.svg %}
     </div>
@@ -40,7 +41,7 @@ layout: base
 <section class="usa-section background-brand-dark">
   <div class="usa-grid main-content">
      <div class= "usa-grid" align="center">
-      <p><h1>OES and USAID</h1></p> 
+      <p><h1>OES and USAID</h1></p>
     <p>    </p>
     <div class="usa-width-one-half">
       <div class="videoWrapper">
@@ -50,7 +51,7 @@ layout: base
   <div class="usa-width-one-half single-sidebar">
   <div class= "usa-grid" align="left">
     <p> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaborations is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
-      
+
       <b>If you are a USAID Mission or implementing partner interested in collaborating with OES, learn how to start the conversation by clicking below.</b></p>
     {% if page.video-button-link %}
       <a href="{{ page.video-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.video-button-text }}</a>
