Moving featured items to lower on the homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,12 +20,6 @@ layout: base
   {% include graphic-list.html graphics=page.graphics %}
 {% endcapture %}
 {% if page.graphics_position != 'after' %}{{ _graphics }}{% endif %}
-<section class="usa-section featured background-brand-dark">
-  <div class="usa-grid">
-      <h2>Title Here</h2>
-    {% include projects-feature.html %}
-  </div>
-</section>
 <section class="usa-section billboard">
   <div class="usa-grid">
     <div class="usa-media_block-img">
@@ -41,7 +35,12 @@ layout: base
     </div>
   </div>
 </section>
-
+<section class="usa-section featured background-light">
+  <div class="usa-grid">
+      <h2>Title Here</h2>
+    {% include projects-feature.html %}
+  </div>
+</section>
 <section class="usa-section background-brand-dark">
   <div class="usa-grid main-content">
      <div class= "usa-grid" align="center">
