--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@ layout: base
 </section>
 <section class="usa-section featured background-light">
   <div class="usa-grid">
-      <h2>Title Here</h2>
+      <h2>Featured Projects</h2>
     {% include projects-feature.html %}
   </div>
 </section>
