adding the reversed sorting back in

--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -16,7 +16,7 @@ scripts:
 
 {% include filter.html items=site.projects filters=layout.filters %}
 <div class="project-container">
-  {% for project in site.projects %}
+  {% for project in site.projects reversed %}
     {% include projects.html %}
   {% endfor %}
 </div>
