--- a/_sass/components/_library-card.scss
+++ b/_sass/components/_library-card.scss
@@ -8,6 +8,7 @@
   padding-bottom: 3rem;
   position: relative;
   text-decoration: none;
+  border-top: 10px solid green;
 
   @include media($medium-screen) {
     margin-right: 2.3%;
