--- a/_layouts/project-single.html
+++ b/_layouts/project-single.html
@@ -24,7 +24,7 @@ class: page-project-single
   <h3 class="h4">Domain</h3>
   <p>{{ page.domain }}</p>
 {% endif %}
-{% if page.analysis_plan %}
+{% if page.analysis-plan %}
 <h3 class="h4">Resources</h3>
   <a class="usa-button" href="{{ page.abstract | prepend: site.baseurl }}">View Analysis Plant</a>  
 {% endif %}  
