--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -2,7 +2,7 @@
 layout: page
 filters:
   - key: year
-    title: Year Published
+    title: Year Completed
   - key: domain
     title: Domain
   - key: agency
