--- a/_layouts/project-single.html
+++ b/_layouts/project-single.html
@@ -26,7 +26,7 @@ class: page-project-single
 {% endif %}
 {% if page.analysis-plan %}
 <h3 class="h4">Resources</h3>
-  <a class="usa-button" href="{{ page.abstract | prepend: site.baseurl }}">View Analysis Plant</a>  
+  <a class="usa-button" href="{{ page.abstract | prepend: site.baseurl }}">View Analysis Plan</a>  
 {% endif %}  
 {% if page.abstract %}
   <h3 class="h4">Resources</h3>
