--- a/_layouts/page-threecolumns.html
+++ b/_layouts/page-threecolumns.html
@@ -24,21 +24,15 @@ layout: base
 </div>
 <section class="usa-section background-brand-dark">
   <div class="usa-grid main-content">
-     <div class= "usa-grid" align="center">
-      <p><h1>OES and USAID</h1></p>
-    <p>    </p>
+      <div class="usa-grid">
     <div class="usa-width-one-half">
-      <div class="videoWrapper">
-        <iframe src="https://drive.google.com/file/d/0BxayWw6MbOYbTE8tSktGRFNlNGM/preview" width="512" height="384"></iframe>
-      </div>
+      <h3>Analysis Plan Commitment</h3>
+      <p>One of the most important steps we take is committing to a detailed analysis plan before we begin working with data. We commit ourselves to specific outcome variables and analytic methods, and we date-stamp the plan and post it on our website so that others can hold us accountable. With this, policymakers can base decisions on our results with confidence and researchers can verify that our methods are sound.</p>
     </div>
-  <div class="usa-width-one-half single-sidebar">
-  <div class= "usa-grid" align="left">
-    <p> Since 2015, OES and the United States Agency for International Development (USAID) have collaborated to apply insights from behavioral sciences and conduct rigorous, low-cost evaluations on child and maternal health and infectious diseases programs around the world. The goal of the collaborations is to identify cost-effective, evidence-based changes that can be scaled for broader impact.
-
-      <b>If you are a USAID Mission or implementing partner interested in collaborating with OES, learn how to start the conversation by clicking below.</b></p>
-    {% if page.video-button-link %}
-      <a href="{{ page.video-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.video-button-text }}</a>
-    {% endif %}
+    <div class="usa-width-one-half">
+      <h3>Reanalysis</h3>
+      <p>All evaluations go through an internal replication. An independent reanalyst — an analyst who does not know the initial results — writes new code to analyze the data, working only from the raw data and the Analysis Plan. Any discrepancies between the two independent analyses are then addressed before the results are finalized.
+</p>
     </div>
+  </div>
   </section>
