--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
           <a href="{{ site.baseurl }}/about/">About</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/approach/">Approach</a>
+          <a href="{{ site.baseurl }}/approach/">Methods</a>
         </li>
         <li>
           <a href="{{ site.baseurl }}/work/">Work</a>
@@ -22,10 +22,7 @@
           <a href="{{ site.baseurl }}/team/">Team</a>
         </li>
         <li>
-          <a href="{{ site.baseurl }}/collaborate/">Collaborate</a>
-        </li>
-        <li>
-          <a href="{{ site.baseurl }}/join/">Join</a>
+          <a href="{{ site.baseurl }}/contact/">Contact</a>
         </li>
       </ul>
     </div>
