--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,27 @@ layout: base
   </div>
 </section>
 {% endif %}
-
+<section class="usa-section background-light">
+  <div class="usa-grid main-content">
+ <div class="usa-grid">
+    <div class="usa-width-one-fourth">
+      <h3>One Fourth</h3>
+      <p>California is a state located on the West Coast of the United States. It is the most populous U.S. state, with 38 million people, and the third largest state by area (after Alaska and Texas).</p>
+    </div>
+    <div class="usa-width-one-fourth">
+      <h3>One Fourth</h3>
+      <p>Illinois is a state in the Midwestern United States. It is the 5th most populous state and 25th largest state in terms of land area, and is often noted as a microcosm of the entire country.</p>
+    </div>
+    <div class="usa-width-one-fourth">
+      <h3>One Fourth</h3>
+      <p>Maine is a state in the New England region of the northeastern United States. In spite of its maritime position, it has a continental climate even in coastal cities such as its largest city Portland.</p>
+    </div>
+    <div class="usa-width-one-fourth">
+      <h3>One Fourth</h3>
+      <p>Indiana is a U.S. state located in the midwestern and Great Lakes regions of North America. Indiana is the 38th largest by area and the 16th most populous of the 50 United States.</p>
+    </div>
+  </div>
+  </section>
 {% capture _graphics %}
   {% include graphic-list.html graphics=page.graphics %}
 {% endcapture %}
