--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,9 +19,8 @@ layout: base
   <div class="usa-grid main-content">
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-      <h3>One Fourth</h3>
-      <p>California is a state located on the West Coast of the United States. It is the most populous U.S. state, with 38 million people, and the third largest state by area (after Alaska and Texas).</p>
-    </div>
+      <p>More than $8M in cost savings and revenue![Impact 1]({{ '/assets/img/icons/example1.png' | prepend: site.baseurl }} "Impact 1")</p>
+   </div>
     <div class="usa-width-one-fourth">
       <h3>One Fourth</h3>
       <p>Illinois is a state in the Midwestern United States. It is the 5th most populous state and 25th largest state in terms of land area, and is often noted as a microcosm of the entire country.</p>
