--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,11 +19,12 @@ layout: base
   <div class="usa-grid main-content">
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-      <p>More than $8M in cost savings and revenue![Impact 1]({{ '/assets/img/icons/example1.png' | prepend: site.baseurl }} "Impact 1")</p>
+       <h3>$8M+ in cost savings and revenue in less than 15 months</h3>
+      <p>![Impact 1]({{ '/assets/img/icons/example1.png' | prepend: site.baseurl }} "Example 1")</p>
    </div>
     <div class="usa-width-one-fourth">
-      <h3>One Fourth</h3>
-      <p>Illinois is a state in the Midwestern United States. It is the 5th most populous state and 25th largest state in terms of land area, and is often noted as a microcosm of the entire country.</p>
+      <h3>More than 20,000 new active duty servicemember retirement savings plan enrollees</h3>
+      <p>![Impact 2]({{ '/assets/img/icons/example2.png' | prepend: site.baseurl }} "Example 2")</p>
     </div>
     <div class="usa-width-one-fourth">
       <h3>One Fourth</h3>
