--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -24,11 +24,12 @@ layout: base
 </div>
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-      <h3>One Fourth</h3>
       <p>California is a state located on the West Coast of the United States. It is the most populous U.S. state, with 38 million people, and the third largest state by area (after Alaska and Texas).</p>
     </div>
     <div class="usa-width-three-fourths">
-      <h3>One Fourth</h3>
-      <p>Illinois is a state in the Midwestern United States. It is the 5th most populous state and 25th largest state in terms of land area, and is often noted as a microcosm of the entire country.</p>
+      <h3><b>Partner</b> with Federal Agencies to target priority outomes</h3>
+      <p>This section will talk about serving the public, humbly collaborating priority outcome measures.
+        [OES Project Initiation Document]({{site.baseurl}}/assets/files/ProjectInitiation.pdf)
+      </p>
     </div>
   </div>
