--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -28,8 +28,7 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3><b>Partner</b> with Federal Agencies to target priority outomes</h3>
-      <p>This section will talk about serving the public, humbly collaborating priority outcome measures.
-        [OES Project Initiation Document]({{site.baseurl}}/assets/files/ProjectInitiation.pdf)
-      </p>
+      <p>This section will talk about serving the public, humbly collaborating priority outcome measures.</p>
+      <p>[OES Project Initiation Document]({{site.baseurl}}/assets/files/ProjectInitiation.pdf)</p>
     </div>
   </div>
