--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -24,7 +24,7 @@ layout: base
 </div>
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-      <p>California is a state located on the West Coast of the United States. It is the most populous U.S. state, with 38 million people, and the third largest state by area (after Alaska and Texas).</p>
+    ![Process Step One]({{ '/assets/img/icons/1.png' | prepend: site.baseurl }} "Process Step One")
     </div>
     <div class="usa-width-three-fourths">
       <h3><b>Partner</b> with Federal Agencies to target priority outomes</h3>
