--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -27,8 +27,18 @@ layout: base
     ![Process Step One]({{ '/assets/img/icons/1.png' | prepend: site.baseurl }} "Process Step One")
     </div>
     <div class="usa-width-three-fourths">
-      <h3><b>Partner</b> with Federal Agencies to target priority outomes</h3>
+      <h3>Step 1: Partner with Federal Agencies to target priority outomes</h3>
       <p>This section will talk about serving the public, humbly collaborating priority outcome measures.</p>
+      <p>[OES Project Initiation Document]({{site.baseurl}}/assets/files/ProjectInitiation.pdf)</p>
+    </div>
+  </div>
+ <div class="usa-grid">
+    <div class="usa-width-one-fourth">
+    ![Process Step Two]({{ '/assets/img/icons/2.png' | prepend: site.baseurl }} "Process Step Two")
+    </div>
+    <div class="usa-width-three-fourths">
+      <h3>Step 2: Translate evidence-based insights into concrete recommendations</h3>
+      <p>This section will talk about behavioral mapping, intervention design, literature review, etc.</p>
       <p>[OES Project Initiation Document]({{site.baseurl}}/assets/files/ProjectInitiation.pdf)</p>
     </div>
   </div>
