--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -24,7 +24,7 @@ layout: base
 </div>
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-    <img src="{{ '/assets/img/icons/1.png | prepend: site.baseurl }}">
+    <img src="{{ '/assets/img/icons/1.png' | prepend: site.baseurl }}">
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 1: Partner with Federal Agencies to target priority outomes</h3>
@@ -34,7 +34,7 @@ layout: base
   </div>
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-    <img src="{{ '/assets/img/icons/2.png | prepend: site.baseurl }}">
+    <img src="{{ '/assets/img/icons/2.png' | prepend: site.baseurl }}">
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 2: Translate evidence-based insights into concrete recommendations</h3>
