--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -30,7 +30,7 @@ layout: base
       <h3>Step 1: Partner with Federal Agencies to target priority outomes</h3>
       <p>This section will talk about serving the public, humbly collaborating priority outcome measures.</p>
       <p>[OES Project Initiation Document]({{site.baseurl}}/assets/files/ProjectInitiation.pdf)</p>
-      <p><a> href="{{ '/assets/files/ProjectInitiation.pdf' | prepend: site.baseurl }}">Project Initiation Document</a></p>
+      <p><a href="{{ '/assets/files/ProjectInitiation.pdf' | prepend: site.baseurl }}">Project Initiation Document</a></p>
     </div>
   </div>
  <div class="usa-grid">
