--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ layout: base
   <div class="usa-grid main-content">
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-       <h3>$8M+ in cost savings and revenue in less than 15 months</h3>
+      <h3><c>$8M+ in cost savings and revenue in less than 15 months</c></h3>
       <p>![Impact 1]({{ '/assets/img/icons/example1.png' | prepend: site.baseurl }} "Example 1")</p>
    </div>
     <div class="usa-width-one-fourth">
