--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ layout: base
       <p>![Impact 1]({{ '/assets/img/icons/example1.png' | prepend: site.baseurl }} "Example 1")</p>
    </div>
     <div class="usa-width-one-fourth">
-      <h3>More than 20,000 new active duty servicemember retirement savings plan enrollees</h3>
+      <h3><center>More than 20,000 new active duty servicemember retirement savings plan enrollees</center></h3>
       <p>![Impact 2]({{ '/assets/img/icons/example2.png' | prepend: site.baseurl }} "Example 2")</p>
     </div>
     <div class="usa-width-one-fourth">
