--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,11 +20,11 @@ layout: base
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
       <h3><center>$8M+ in cost savings and revenue in less than 15 months</center></h3>
-      <p><center><img src="{{ '/assets/img/icons/example1.png' | prepend: site.baseurl }}"></center></p>
+      <p><center><img src="{{ '/assets/img/icons/example1.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
    </div>
     <div class="usa-width-one-fourth">
       <h3><center>More than 20,000 new active duty servicemember retirement savings plan enrollees</center></h3>
-       <p><center><img src="{{ '/assets/img/icons/example2.png' | prepend: site.baseurl }}"></center></p>
+       <p><center><img src="{{ '/assets/img/icons/example2.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
       <h3>One Fourth</h3>
