--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -24,7 +24,7 @@ layout: base
 </div>
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-    <img src="{{ '/assets/img/icons/1.png' | prepend: site.baseurl }}">
+    <center><img src="{{ '/assets/img/icons/1.png' | prepend: site.baseurl }}" height="100" width="100"></center>
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 1: Partner with Federal Agencies to target priority outomes</h3>
@@ -34,11 +34,51 @@ layout: base
   </div>
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
-    <img src="{{ '/assets/img/icons/2.png' | prepend: site.baseurl }}">
+    <center><img src="{{ '/assets/img/icons/2.png' | prepend: site.baseurl }}" height="100" width="100"></center>
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 2: Translate evidence-based insights into concrete recommendations</h3>
       <p>This section will talk about behavioral mapping, intervention design, literature review, etc.</p>
-      <p>[OES Project Initiation Document]({{site.baseurl}}/assets/files/ProjectInitiation.pdf)</p>
+      <p><a href="{{ '/assets/files/ProjectDesign.pdf' | prepend: site.baseurl }}">Project Design Document</a></p>
+    </div>
+  </div>
+ <div class="usa-grid">
+    <div class="usa-width-one-fourth">
+    <center><img src="{{ '/assets/img/icons/3.png' | prepend: site.baseurl }}" height="100" width="100"></center>
+    </div>
+    <div class="usa-width-three-fourths">
+      <h3>Step 3: Embed tests using randomized evaluations</h3>
+      <p>This section will talk about randomization, reproducibility.</p>
+     <p><a href="{{ '/assets/files/AnalysisPlan.pdf' | prepend: site.baseurl }}">Analysis Plan Document</a></p>
+    </div>
+  </div>
+ <div class="usa-grid">
+    <div class="usa-width-one-fourth">
+    <center><img src="{{ '/assets/img/icons/4.png' | prepend: site.baseurl }}" height="100" width="100"></center>
+    </div>
+    <div class="usa-width-three-fourths">
+      <h3>Step 4: Analyze results utilizing exisitng administrative data</h3>
+      <p>This section will talk about randomization, reproducibility.</p>
+     <p><a href="{{ '/assets/files/RecordAnalysis.pdf' | prepend: site.baseurl }}">Record of Analysis Document</a></p>
+    </div>
+  </div>
+ <div class="usa-grid">
+    <div class="usa-width-one-fourth">
+    <center><img src="{{ '/assets/img/icons/5.png' | prepend: site.baseurl }}" height="100" width="100"></center>
+    </div>
+    <div class="usa-width-three-fourths">
+      <h3>Step 5: Ensure our work meets evaluation best practice</h3>
+      <p>This section will talk about RSS. Could also include description of "checks" - for badges</p>
+     <p><a href="{{ '/assets/files/RecordReanalysis.pdf' | prepend: site.baseurl }}">Record of Reanalysis Document</a></p>
+    </div>
+  </div>
+ <div class="usa-grid">
+    <div class="usa-width-one-fourth">
+    <center><img src="{{ '/assets/img/icons/6.png' | prepend: site.baseurl }}" height="100" width="100"></center>
+    </div>
+    <div class="usa-width-three-fourths">
+      <h3>Step 6: Measure impact and build evidence to continuously improve</h3>
+      <p>This section will talk about transparency, sharing for different types of audiences.</p>
+     <p><a href="{{ '/assets/files/Abstract.pdf' | prepend: site.baseurl }}">Abstract Document</a></p>
     </div>
   </div>
