--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -28,7 +28,7 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 1: Partner with Federal Agencies to target priority outomes</h3>
-      <p>This section will talk about serving the public, humbly collaborating priority outcome measures.</p>
+      <p>This section will talk about serving the public, humbly collaborating, already established priority outcome measures.</p>
       <p><a href="{{ '/assets/files/ProjectInitiation.pdf' | prepend: site.baseurl }}">Project Initiation Document</a></p>
     </div>
   </div>
