--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,7 @@ layout: base
  <div class="usa-grid">
     <div class="usa-width-one-fourth">
       <h3><center>$8M+ in cost savings and revenue in less than 15 months</center></h3>
+      <br/><br/>
       <p><center><img src="{{ '/assets/img/icons/example1.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
    </div>
     <div class="usa-width-one-fourth">
@@ -27,12 +28,12 @@ layout: base
        <p><center><img src="{{ '/assets/img/icons/example2.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
-      <h3>One Fourth</h3>
-      <p>Maine is a state in the New England region of the northeastern United States. In spite of its maritime position, it has a continental climate even in coastal cities such as its largest city Portland.</p>
+      <h3>Vaccine Uptake</h3>
+     <p><center><img src="{{ '/assets/img/icons/example3.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
-      <h3>One Fourth</h3>
-      <p>Indiana is a U.S. state located in the midwestern and Great Lakes regions of North America. Indiana is the 38th largest by area and the 16th most populous of the 50 United States.</p>
+      <h3>6% increase in college enrollment</h3>
+      <p><center><img src="{{ '/assets/img/icons/example4.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
   </div>
   </section>
