--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -27,7 +27,7 @@ layout: base
     <center><img src="{{ '/assets/img/icons/1.png' | prepend: site.baseurl }}" height="100" width="100"></center>
     </div>
     <div class="usa-width-three-fourths">
-      <h3>Step 1: Partner with Federal Agencies to target priority outomes</h3>
+      <h3>Step 1: Partner with Federal Agencies to target priority outcomes</h3>
       <p>This section will talk about serving the public, humbly collaborating, already established priority outcome measures.</p>
       <p><a href="{{ '/assets/files/ProjectInitiation.pdf' | prepend: site.baseurl }}">Project Initiation Document</a></p>
     </div>
