--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -50,7 +50,7 @@ layout: base
     </div>
     <div class="usa-media_block-body">
     <div class="billboard-message">
-      <h2>{{ content }}</h2>
+      <h2><center>{{ content }}</center></h2>
     </div>
     {% if page.content-button-link %}
       <a href="{{ page.content-button-link | prepend: site.baseurl }}" class="usa-button usa-button-big">{{ page.content-button-text }}</a>
