--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,12 +28,12 @@ layout: base
        <p><center><img src="{{ '/assets/img/icons/example2.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
-      <h3>Vaccine Uptake</h3>
+      <h3><center>Half a million vaccine uptake communications tested</center></h3>
       <br/><br/>
      <p><center><img src="{{ '/assets/img/icons/example3.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
     <div class="usa-width-one-fourth">
-      <h3>6% increase in college enrollment</h3>
+      <h3><center>6% increase in college enrollment</center></h3>
       <br/><br/>
       <p><center><img src="{{ '/assets/img/icons/example4.png' | prepend: site.baseurl }}" height="100" width="100"></center></p>
     </div>
